<resources>
    <string name="app_name">Covid-19</string>
    <string name="Jaga_Diri">Menghindari Covid-19</string>
    <string name="Cara">Cara menjaga diri dari virus Covid-19</string>
    <string name="rajincucitangan">1. Sering cuci tangan dengan sabun</string>
    <string name="selalupakaimasker">2. Selalu memakai masker ketika bepergian</string>
    <string name="bawahandsanitazer">3. Selalu membawa Handsanitazer</string>
    <string name="olahraga">4. Berolahraga secara rutin</string>
    <string name="makan">5. Makan makanan bergizi</string>
    <string name="kontaklangsung">6. Hindari kontak langsung dengan orang</string>
    <string name="Cuci_Tangan">Cara Cuci Tangan Yang Benar</string>
    <string name="Caracuci">Cara Mencuci Tangan Yang Benar</string>
    <string name="basahi">1. Basahi tangan dengan air</string>
    <string name="tuang">2. Tuang sabun secukupnya</string>
    <string name="gosok">3. Gosok telapak tangan yang satu dengan lainnya</string>
    <string name="gosokpunggung">4. Gosok punggung tangan dan sela sela jari</string>
    <string name="ujung">5. Gosok ujung-ujung jari agar kuku terkena</string>
    <string name="air">6. Gosok tangan yang bersabun dengan air mengalir</string>
    <string name="lap">7. Keringkan tangan dengan lap sekali pakai</string>
    <string name="Pakai_masker">CARA MEMAKAI MASKER YANG BENAR</string>
    <string name="Carapakai">Cara memakai masker yang benar</string>
    <string name="cuci">1. Cuci tangan dengan sabun dan air mengalir</string>
    <string name="bersih">2. Lap tangan hingga kering</string>
    <string name="tutupi">3. Tutupi mulut dan hidung dengan masker</string>
    <string name="hindari">5. Hindari menyentuh masker saat mengenakannya</string>
    <string name="jangan">6. Jangan gunakan masker yang sudah lembab dan pernah dipakai</string>
    <string name="lepas">7. Lepaskan masker dari belakang</string>
    <string name="Hidup_sehat">Penerapan Pola hidup sehat</string>
    <string name="polahidup">Penerapan Pola Hidup Sehat</string>
    <string name="makanbergizi">1. Makan makanan bergizi</string>
    <string name="istirahat">2. Istirahat yang cukup</string>
    <string name="rutinolahraga">3. Berolahraga secara teratur</string>
    <string name="airputih">4. Perbanyak minum air putih</string>
    <string name="mandi">5. Mandi sehari 2x pagi dan sore</string>
    <string name="berpikir">6. Selalu berpikir positif</string> />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    >
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
    />
</resources>