<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#2A283D"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<Button
		android:id="@+id/btn_Jaga_Diri"
		android:layout_width="match_parent"
		android:layout_height="72dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:backgroundTint="#65205B"
		android:text="@string/Jaga_Diri"
		android:textColor="#ffffff" />
	<Button
	android:id="@+id/btn_Cuci_Tangan"
	android:layout_width="match_parent"
	android:layout_height="72dp"
	android:layout_marginTop="-140dp"
	android:backgroundTint="#65205B"
	android:text="@string/Cuci_Tangan"
	android:textColor="#ffffff" />
	<Button
		android:id="@+id/btn_Pakai_masker"
		android:layout_width="match_parent"
		android:layout_height="72dp"
		android:layout_marginTop="20dp"
		android:backgroundTint="#65205B"
		android:text="@string/Pakai_masker"
		android:textColor="#ffffff" />
	<Button
		android:id="@+id/btn_Hidup_sehat"
		android:layout_width="match_parent"
		android:layout_height="72dp"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="35dp"
		android:backgroundTint="#65205B"
		android:text="@string/Hidup_sehat"
		android:textColor="#ffffff" />
</LinearLayout>
